# Back_Office_Fintech

./: .env.example  .gitignore  README.md  fintech_backoffice_workflow_agent_v2.md  fintech_usecase_diagram.html  fintech_usecase_diagram.md  implementation_plan.md  project_context_report.md  pyproject.toml  railway.toml  requirements.txt
docs/: demo.md  evaluation_report.md  llm_extraction.md  mcp_architecture.md  supabase_setup.md
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
scripts/: .gitkeep  check_supabase_connection.py  demo_wallet_topup.py  load_seed_to_supabase.py  run_demo_cases.py  run_mcp_server.py  run_migration_psql.py  run_supabase_migration.py
supabase/: complete_setup.sql
tests/: __init__.py  conftest.py  merchant_settlement_e2e_results.json  test_account_discovery.py  test_account_lock_resolver.py  test_acknowledgement_behavior.py  test_alternative_resolver.py  test_case_transition.py  test_chat_handoff.py  test_chat_trace.py  test_claim_evidence_binding.py  test_claim_evidence_labeling.py  test_customer_chat.py  test_customer_chat_agent.py  test_customer_claims.py  test_data_grounded_response.py  test_generic_pipeline.py  test_health.py  test_merchant_api_fixes.py  test_merchant_identity_correction.py  test_merchant_settlement_chat_safety.py  test_merchant_settlement_e2e.py  test_merchant_settlement_resolver.py  test_message_analyzer.py  test_mock_auth.py  test_no_match_honesty.py  test_routing_workflow_scoping.py  test_ticket_investigation.py  test_train_ticket_resolver.py  (+6 more)
(+215 files in other folders)
